syntax = "proto3";

package grpc.userProvider;

// ============================
// Messages
// ============================

// Update balance via API call
message UpdateBalanceAPICallRequest {
  string userId = 1;
  float balance = 2;
}

message UpdateBalanceAPICallResponse {}

// Get partnership IDs (parents)
message GetPartnershipIdRequest {
  string userId = 1;
}

message GetPartnershipIdResponse {
  string data = 1;
}

// Lock/Unlock user from user panel
message LockUnlockUserByUserPanelRequest {
  string userId = 1;
  bool userBlock = 2;
  string parentId = 3;
  bool autoBlock = 4;
}

message LockUnlockUserByUserPanelResponse {}

// ============================
// Service
// ============================

service UserService {
  rpc UpdateBalanceAPICall(UpdateBalanceAPICallRequest) returns (UpdateBalanceAPICallResponse);
  rpc GetPartnershipId(GetPartnershipIdRequest) returns (GetPartnershipIdResponse);
  rpc LockUnlockUserByUserPanel(LockUnlockUserByUserPanelRequest) returns (LockUnlockUserByUserPanelResponse);
}
